# netease-watcher

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
.zed/: settings.json
hook/: Cargo.toml
hooker/: Cargo.toml
hooker/src/: lib.rs  main.rs  window.rs
src/: main.rs  netease.rs  util.rs  websocket.rs
watcher/: Cargo.toml  build.rs
watcher/src/: logging.rs  main.rs  mem.rs  netease.rs  server.rs  tui.rs  util.rs  websocket.rs
watcher/src/netease/: unix.rs  windows.rs
watcher/src/netease/unix/: util.rs
watcher/src/netease/windows/: process.rs  util.rs
watcher/src/tui/: header.rs  logger.rs  util.rs
