[package]
name = "netease-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.17", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full", "parking_lot"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell"
]
