[package]
name = "netease-watcher"
version = "0.4.5"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
lightningscanner = "1.0.2"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell"
]
