[package]
name = "wndhok"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static.workspace = true
smallvec = "1.15.1"
spin = "0.10.0"

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging"
]
