[package]
name = "netease-watcher"
version = "0.8.0"
edition = "2021"

[features]
default = ["tui"]

tui = []

[dependencies]
ansi-to-tui = "7.0.0"
axum = { version = "0.8.4", features = ["ws"] }
chrono = "0.4.41"
crossterm = "0.29.0"
fern = { version = "0.7.1", features = ["colored"] }
lazy_static.workspace = true
lightningscanner = "1.0.2"
log = "0.4.27"
notify = "8.2.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]

[target.'cfg(unix)'.dependencies]
procfs = "0.18.0"
nix = { version = "0.31.1", features = ["uio", "process", "ptrace"] }
